# objects_tracking

./: CMakeLists.txt
src/: main.cpp
src/video/: videothread.cpp  videothread.h
src/video/object_detector/: Detection.h  ObjectDetector.cpp  ObjectDetector.h
src/video/optical_flow/: OpticalFlow.cpp  OpticalFlow.h
src/widgets/main_window/: mainwindow.cpp  mainwindow.h
